Resolved issue "CacheService – Complete Rework #36"